--- a/app/src/main/res/layout/item_tweet.xml
+++ b/app/src/main/res/layout/item_tweet.xml
@@ -8,8 +8,8 @@
 
     <ImageView
         android:id="@+id/ivProfileImage"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_marginRight="5dp"
@@ -20,11 +20,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="21dp"
+        android:layout_marginStart="1dp"
         android:layout_marginTop="0dp"
         android:layout_toEndOf="@+id/tvName"
         android:text="TextView"
-        tools:text="Twitter Handle" />
+        tools:text="\@name" />
 
     <TextView
         android:id="@+id/tvBody"
@@ -41,13 +41,14 @@
         android:layout_height="wrap_content"
         android:layout_toEndOf="@+id/ivProfileImage"
         android:text="TexView"
+        android:textStyle="bold"
         tools:text="Name" />
 
     <TextView
         android:id="@+id/tvTime"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="22dp"
+        android:layout_marginStart="2dp"
         android:layout_toEndOf="@+id/tvScreenName"
         android:text="TextView"
         tools:text="10h" />
