--- a/app/src/main/res/layout/activity_timeline.xml
+++ b/app/src/main/res/layout/activity_timeline.xml
@@ -10,7 +10,7 @@
         android:id="@+id/swipeContainer"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="0dp"
         app:layout_constraintTop_toTopOf="parent">
 
         <android.support.v7.widget.RecyclerView
@@ -24,38 +24,40 @@
 
     </android.support.v4.widget.SwipeRefreshLayout>
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/swipeContainer"
-        android:background="@color/twitter_blue"
-        android:theme="?attr/actionBarTheme" />
+    <!-- TODO - change to using toolbar for more advanced customization -->
 
-    <ImageView
-        android:id="@+id/ivUserImage"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginRight="5dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="@id/toolbar"
-        tools:srcCompat="@tools:sample/avatars[7]" />
+    <!--<android.support.v7.widget.Toolbar-->
+        <!--android:id="@+id/toolbar"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--app:layout_constraintStart_toStartOf="parent"-->
+        <!--app:layout_constraintBottom_toTopOf="@id/swipeContainer"-->
+        <!--android:background="@color/twitter_blue"-->
+        <!--android:theme="?attr/actionBarTheme" />-->
 
-    <TextView
-        android:id="@+id/tvToolbarTitle"
-        android:layout_width="wrap_content"
-        android:layout_height="27dp"
-        android:layout_margin="5dp"
-        android:text="SimpleTwitterClient"
-        android:textColor="@color/light_gray"
-        android:textSize="18dp"
-        android:gravity="center_vertical"
-        app:layout_constraintLeft_toRightOf="@id/ivUserImage"
-        app:layout_constraintTop_toTopOf="@id/ivUserImage"
-        tools:layout_editor_absoluteY="2dp" />
+    <!--<ImageView-->
+        <!--android:id="@+id/ivUserImage"-->
+        <!--android:layout_width="48dp"-->
+        <!--android:layout_height="48dp"-->
+        <!--android:layout_alignParentTop="true"-->
+        <!--android:layout_alignParentStart="true"-->
+        <!--android:layout_marginRight="5dp"-->
+        <!--app:layout_constraintStart_toStartOf="parent"-->
+        <!--app:layout_constraintBottom_toBottomOf="@id/toolbar"-->
+        <!--tools:srcCompat="@tools:sample/avatars[7]" />-->
+
+    <!--<TextView-->
+        <!--android:id="@+id/tvToolbarTitle"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="27dp"-->
+        <!--android:layout_margin="5dp"-->
+        <!--android:text="SimpleTwitterClient"-->
+        <!--android:textColor="@color/light_gray"-->
+        <!--android:textSize="18dp"-->
+        <!--android:gravity="center_vertical"-->
+        <!--app:layout_constraintLeft_toRightOf="@id/ivUserImage"-->
+        <!--app:layout_constraintTop_toTopOf="@id/ivUserImage"-->
+        <!--tools:layout_editor_absoluteY="2dp" />-->
 
 
 </android.support.constraint.ConstraintLayout>
