--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="medium_green">#ff17bf63</color>
-    <color name="medium_gray">#ffaab8c2</color>
+    <color name="medium_gray">#AAB8C2</color>
     <color name="medium_gray_30">#4daab8c2</color>
     <color name="medium_gray_50">#80aab8c2</color>
     <color name="light_gray">#CCD6DD</color>
