--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,6 +1,7 @@
 <resources>
 
-    <style name="AppBaseTheme" parent="Theme.AppCompat.Light.NoActionBar">
+    <style name="AppBaseTheme" parent="Theme.AppCompat.DayNight.DarkActionBar">
+    <!-- TODO - change to hide action bar <style name="AppBaseTheme" parent="Theme.AppCompat.Light.NoActionBar">-->
         <!--
             Theme customizations available in newer API levels can go in
             res/values-vXX/styles.xml, while customizations related to
@@ -11,6 +12,15 @@
     <!-- Application theme. -->
     <style name="AppTheme" parent="AppBaseTheme">
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
+    </style>
+    
+    <style name="TextLabel">
+        <item name="android:textColorHint">@color/medium_gray_30</item>
+
+        <item name="android:colorControlNormal">@color/inline_action</item>
+        <item name="android:colorControlActivated">@color/twitter_blue</item>
+        <item name="android:colorControlHighlight">@color/medium_red_50</item>
+        <!--<item name="android:colorAccent">@color/medium_gray_50</item>-->
     </style>
 
 </resources>
